test link MP-1032

--- a/flow/integrations.mdx
+++ b/flow/integrations.mdx
@@ -7,11 +7,23 @@ import { Integration } from "/snippets/integration.mdx";
 
 Each provides powerful integrations to create AI flows. You can connect your AI models with various integrations like CRM, databases, and more.
 
-<CardGroup cols={2}>
+<CardGroup cols={3}>
 
-   
-<Integration title="Pruna" desc="" img="https://storage.googleapis.com/magicpoint/website/pruna.png" />
-<Integration title="Beam" desc="" img="https://storage.cloud.google.com/magicpoint/website/beam.png" />
+<Integration
+  title="Pruna"
+  desc=""
+  img="https://storage.googleapis.com/magicpoint/website/pruna.png"
+/>
+<Integration
+  title="Beam"
+  desc=""
+  img="https://storage.cloud.google.com/magicpoint/website/beam.png"
+/>
+<Integration
+  title="Skyvern"
+  desc=""
+  img="https://storage.cloud.google.com/magicpoint/website/Skyvern.png"
+/>
 
 </CardGroup>
 
