converto to png

--- a/flow/integrations.mdx
+++ b/flow/integrations.mdx
@@ -11,18 +11,15 @@ Each provides powerful integrations to create AI flows. You can connect your AI 
 
 <Integration
   title="Pruna"
-  desc=""
-  img="https://storage.googleapis.com/magicpoint/website/pruna.png"
+  img="https://storage.googleapis.com/magicpoint/website/pruna.webp"
 />
 <Integration
   title="Beam"
-  desc=""
-  img="https://storage.cloud.google.com/magicpoint/website/beam.png"
+  img="https://storage.googleapis.com/magicpoint/website/beam.webp"
 />
 <Integration
   title="Skyvern"
-  desc=""
-  img="https://storage.cloud.google.com/magicpoint/website/Skyvern.png"
+  img="https://storage.googleapis.com/magicpoint/website/Skyvern.webp"
 />
 
 </CardGroup>
